Fix: header elements collapse

--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -2,10 +2,10 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 3rem 0;
+  padding: 2rem 0;
 
   h1 {
-    font-size: 2em;
+    font-size: 1.5rem;
   }
 
   ul {
